tooling/nargo_cli/tests/snapshots/execution_success/tuple_inputs/execute__tests__dead_witnesses.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: dead_witnesses
---
Found some dead witnesses in function 0:
 - Dead witnesses in program inputs:
  - pair.1 (witness w1)
  - x (witnesses {w2,..,w7})
  - struct_pair (witnesses {w8,..,w17})
Dead witnesses found in circuit
